--- a/domlab.html
+++ b/domlab.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <link rel="stylesheet" href="domlab.css" type="text/css">
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  <link rel="stylesheet" href="domlab.css" media="screen" title="no title">
-  <script src="domlab.js" defer></script>
 </head>
+<script src='domlab.js' defer></script>
 <body>
-    <header>
-      <nav id="top-menu"></nav>
-    </header>
-    <main></main>
-  
-    
+		<div class="container">
+			<h1>SEI Rocks!</h1>
+
+
+			
+</body>
 </body>
 </html>
