--- a/domlab.html
+++ b/domlab.html
@@ -7,6 +7,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
 </head>
+  <nav id="top-menu"></nav> 
+  <nav id="sub-menu"></nav>
 <script src='domlab.js' defer></script>
 <body>
 		<div class="container">
